--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,9 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  {{>navbar}}
   <h1>About</h1>
-  <ul>
-    <li><a href="/">Go back</a></li>
-  </ul>
+  {{>footer}}
 </body>
 </html>
