--- a/web-server/templates/views/error.hbs
+++ b/web-server/templates/views/error.hbs
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Error</title>
 </head>
 <body>
-  <h1>Help</h1>
-  <ul>
-    <li><a href="/">Go back</a></li>
-  </ul>
+  {{>navbar}}
+  <h1>{{message}}</h1>
+  <a href="/">Go back</a>
+  {{>footer}}
 </body>
 </html>
