--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -9,12 +9,10 @@
   <script src="/js/app.js"></script>
 </head>
 <body>
+  {{>navbar}}
   <h1>{{title}}</h1>
-  <ul>
-    <li><a href="/about">About</a></li>
-    <li><a href="/help">Help</a></li>
-  </ul>
   <p>{{description}}</p>
   <img src="/assets/image.png" alt="Samuel">
+  {{>footer}}
 </body>
 </html>
