--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,13 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/css/styles.css">
-  <script src="/js/app.js"></script>
 </head>
 <body>
   {{>navbar}}
-  <h1>{{title}}</h1>
-  <p>{{description}}</p>
-  <img src="/assets/image.png" alt="Samuel">
+  <h1>Weather App</h1>
+  <p>Use this site to get your weather!</p>
+  <form id="weather-form" action="#">
+    <div>
+      <label for="search">Location: </label>
+      <input type="text" id="search">
+      <button>Search</button>
+    </div>
+  </form>
+  <div id="results"></div>
   {{>footer}}
+  <script src="/js/app.js"></script>
 </body>
 </html>
